Avoid pre-tag overflow

--- a/StewardClient/src/app/pages/auth/login/login.component.scss
+++ b/StewardClient/src/app/pages/auth/login/login.component.scss
@@ -11,5 +11,6 @@ mat-card {
   max-width: 75%;
   pre {
     white-space: pre-wrap;
+    overflow: hidden;
   }
 }
