--- a/StewardClient/src/app/pages/error/error.component.scss
+++ b/StewardClient/src/app/pages/error/error.component.scss
@@ -11,6 +11,7 @@ mat-card {
   max-width: 75%;
   pre {
     white-space: pre-wrap;
+    overflow: hidden;
   }
 }
 
