--- a/StewardClient/src/app/shared/views/four-oh-four/four-oh-four.component.scss
+++ b/StewardClient/src/app/shared/views/four-oh-four/four-oh-four.component.scss
@@ -20,4 +20,5 @@ img {
 
 pre {
   white-space: pre-wrap;
+  overflow: hidden;
 }
